2011-05-05  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/commands/jump-or-exec.jl: reverted 2 commits

	* lisp/sawfish/wm/windows.jl: more robustness for get-window-by
	-name, -class, -role

2011-04-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/autoload.jl: removed maybe-raise-tab from
	autoload, aswell as viewport-linear stuff. Add edge-flip-invoke,
	viewport-drag-invoke and tile-windows to autoload

2011-04-25  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/tile.jl: only include windows on
	current-workspace AND current-viewport

	* lisp/sawfish/wm/workspace.jl: fixed window-on-current-workspace-p
	added window-on-current-workspace-viewport-p

2011-04-24  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/edge/tile.jl: tiling for EdgeActions
	original code by Mark Triggs, updated by me [not yet working!]

	* lisp/sawfish/wm/edge/hot-spot.jl: added HotMove for EdgeActions

	* lisp/sawfish/wm/windows.jl
	* lisp/sawfish/wm/workspace.jl
	* lisp/sawfish/wm/commands/move-resize.jl: various support functions
	for HotMove and Tiling

	* lisp/sawfish/wm/edge/conf.jl
	* lisp/sawfish/wm/edge/actions.jl: updated

2011-04-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* configure.in: bump minimum rep to 0.92.0

2011-04-15  Christopher Roy Bratusek <nano@tuxfamily.org>
	* sawfish.desktop
	* sawfish-wm.desktop
	* sawfish-ksm.desktop: unified order
	                       spec compliance
			       -- Kim B. Heino

2011-04-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* configure.in
	* Makefile.in
	* sounds/Makefile.in
	* themes/Makefile.in: remove version from install-paths

	* debian/**: merged more stuff from Ian Zimmermann

2011-04-13  Christopher Roy Bratusek <nano@tuxfamily.org>
	* Makefile.in: added debclean rule
	               improved distclean rule
		       improved gitclean rule

	* config.h.in: removed from GIT

	* config.guess
	* config.sub: added

	* Makedefs.in
	* Makefile.in